# cos-customizer

./: BUILD.bazel  README.md  WORKSPACE  cloudbuild.yaml  deps.bzl  go.mod  go.sum  main.go  run_tests.sh
cmd/: BUILD.bazel  disable_auto_update.go  finish_image_build.go  finish_image_build_test.go  flag_vars.go  flag_vars_test.go  install_gpu.go  install_gpu_test.go  run_script.go  run_script_test.go  seal_oem.go  start_image_build.go  start_image_build_test.go
config/: BUILD.bazel  config.go
config/testdata/: test_1
data/: build_image.wf.json  startup.sh
data/builtin_build_context/: disable_oem_mount.sh  install_gpu.sh  seal_oem.sh
fakes/: BUILD.bazel  gce.go  gcs.go  gcs_test.go
fs/: BUILD.bazel  build_context_test.go  state_file_test.go
gce/: BUILD.bazel  gce.go  gce_test.go
preloader/: BUILD.bazel  gcs.go  gcs_test.go  preload.go  preload_test.go
src/cmd/cos_customizer/: BUILD.bazel  disable_auto_update.go  finish_image_build.go  finish_image_build_test.go  flag_vars.go  flag_vars_test.go  install_gpu.go  install_gpu_test.go  install_packages.go  main.go  run_script.go  run_script_test.go  seal_oem.go  start_image_build.go  start_image_build_test.go
src/cmd/disable_systemd_service/: BUILD.bazel  disable_systemd_service_bin.go
src/cmd/handle_disk_layout/: BUILD.bazel  handle_disk_layout_bin.go
src/cmd/metadata_watcher/: BUILD.bazel  main.go
src/cmd/provisioner/: BUILD.bazel  main.go  resume.go  run.go
src/cmd/seal_oem/: BUILD.bazel  seal_oem_bin.go
src/data/: build_image.wf.json  customizer.service  startup.sh  startup.yaml
src/data/builtin_build_context/: disable_auto_update.sh  install_gpu.sh
src/pkg/config/: BUILD.bazel  config.go  config_test.go
src/pkg/fakes/: BUILD.bazel  gce.go  gce_test.go  gcs_test.go  time.go
src/pkg/fs/: BUILD.bazel  build_context.go  copy.go  file_system.go  gzip.go  gzip_test.go  state_file.go
src/pkg/gce/: BUILD.bazel  gce.go  gce_test.go
src/pkg/preloader/: BUILD.bazel  gcs.go  gcs_test.go  preload.go  preload_test.go
src/pkg/provisioner/: BUILD.bazel  anthos_installer_install_script.go  config.go  disable_auto_update_step.go  disk_layout.go  gpu_setup_script.go  install_gpu_step.go  install_packages_step.go  provisioner.go  provisioner_test.go  run_script_step.go  seal_oem_step.go  state.go  systemd.go
src/pkg/provisioner/testdata/test_ctx/: run.sh  run_env.sh
src/pkg/tools/: BUILD.bazel  disable_systemd_service.go  extend_oem_partition.go  handle_disk_layout.go  handle_disk_layout_test.go  seal_oem_partition.go
src/pkg/tools/partutil/: BUILD.bazel  extend_partition.go  extend_partition_test.go  grub_utils.go  handle_partition_table.go  handle_partition_table_test.go  helpers.go  helpers_test.go  move_partition.go  move_partition_test.go
src/pkg/tools/partutil/partutiltest/: BUILD.bazel
src/pkg/utils/: BUILD.bazel  utils.go
testing/: README  deprecate_test.yaml  disable_auto_update_test.yaml  env_test.yaml  extend_oem_test.yaml  extend_oem_test_1.yaml  extend_oem_test_10.yaml  extend_oem_test_100.yaml  extend_oem_test_1024.yaml  extend_oem_test_2.yaml  extend_oem_test_5.yaml  gpu_test.yaml  gpu_test_390_46.yaml  gpu_test_396_26.yaml  gpu_test_396_37.yaml  gpu_test_396_44.yaml  gpu_test_deps_dir.yaml  image_test.yaml  install_packages_remote_pkgspec_test.yaml  install_packages_test.yaml  milestone_test.yaml  multi_script_test.yaml  parallel_test.yaml  seal_oem_test.yaml  seal_oem_test_no_oem_size.yaml  seal_oem_test_no_size.yaml  seal_oem_test_timeout.yaml  smoke_test.yaml  timeout_test.yaml  toolbox_test.yaml  ubuntu_ova_test.yaml
testing/deprecate_test/: run_test.sh
testing/disable_auto_update_test/: preload.sh  preload_test.cfg
testing/env_test/: preload.sh  preload_test.cfg
testing/extend_oem_test/: extend_oem_test.yaml  preload.sh  preload_test.cfg
testing/gpu_test/: gpu_test.yaml  preload_test.cfg
testing/image_test/: run_test.sh
testing/install_packages_test/: preload_test.cfg
testing/install_packages_test/pkgspec/: kubernetes.yaml  preload-container.yaml
testing/milestone_test/: preload_test.cfg
testing/multi_script/: preload_1.sh  preload_2.sh  preload_test.cfg
testing/seal_oem_test/: Dockerfile  modify_oem.sh  preload.sh  preload_test.cfg  run_test.wf.json  seal_oem_test.yaml  vm.wf.json
testing/smoke_test/: preload.sh  preload_test.cfg
testing/timeout_test/: preload.sh  timeout_test.yaml
testing/toolbox_test/: preload.sh  preload_test.cfg
testing/ubuntu_ova_test/: preload.sh  preload_test.cfg
testing/util/: gpu_vm.wf.json
tools/: BUILD.bazel  disable_systemd_service.go  extend_oem_partition.go  extend_oem_partition_test.go  handle_disk_layout.go  handle_disk_layout_test.go  seal_oem_partition.go
tools/cmd/disable_systemd_service/: BUILD.bazel  disable_systemd_service_bin.go
tools/cmd/extend_oem/: BUILD.bazel  extend_oem_bin.go
tools/cmd/handle_disk_layout/: BUILD.bazel  handle_disk_layout_bin.go
tools/cmd/seal_oem/: BUILD.bazel  seal_oem_bin.go
tools/partutil/: BUILD.bazel  check_err.go  check_err_test.go  convert_size_to_bytes.go  convert_size_to_bytes_test.go  exec_cmd_to_stdout.go  extend_partition.go  extend_partition_test.go  handle_partition_table.go  handle_partition_table_test.go  helpers.go  helpers_test.go  move_partition.go  move_partition_test.go  read_partition_info.go  read_partition_info_test.go  read_partition_size.go  read_partition_size_test.go  read_partition_start.go  read_partition_start_test.go
tools/partutil/disk_file/: ori_disk
tools/partutil/partutiltest/: BUILD.bazel  set_test_env.go
tools/partutil/testdata/: ori_disk
