# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the License);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@package_bundle//file:packages.bzl", "packages")
load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")

# gazelle:prefix cos-customizer
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "cos-customizer",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd:go_default_library",
        "//fs:go_default_library",
        "@com_github_google_subcommands//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

genrule(
    name = "workspace_dir",
    outs = ["workspace"],
    cmd = "mkdir $@",
)

genrule(
    name = "tmp_dir",
    outs = ["tmp"],
    cmd = "mkdir $@",
)

genrule(
    name = "copy_handle_disk_layout_bin",
    srcs = ["//tools/cmd/handle_disk_layout:handle_disk_layout_bin"],
    outs = ["handle_disk_layout.bin"],
    cmd = "cp $< $@",
)


genrule(
    name = "copy_seal_oem_bin",
    srcs = ["//tools/cmd/seal_oem:seal_oem_bin"],
    outs = ["seal_oem.bin"],
    cmd = "cp $< $@",
)

genrule(
    name = "copy_disable_systemd_service_bin",
    srcs = ["//tools/cmd/disable_systemd_service:disable_systemd_service_bin"],
    outs = ["disable_systemd_service.bin"],
    cmd = "cp $< $@",
)

container_image(
    name="veritysetup",
    repository="veritysetup",
    debs=[
        packages["coreutils"],
        packages["tar"],
        packages["libacl1"],
        packages["libattr1"],
        packages["libc6"],
        packages["libselinux1"],
        packages["libpcre3"],
        packages["cryptsetup-bin"],
        packages["libcryptsetup4"],
        packages["libpopt0"],
        packages["libuuid1"],
        packages["libdevmapper1.02.1"],
        packages["libgcrypt20"],
        packages["libargon2-0"],
        packages["libjson-c3"],
        packages["libudev1"],
        packages["libpthread-stubs0-dev"],
        packages["libm17n-0"],
        packages["libgpg-error0"],
    ],
)

genrule(
    name = "veritysetup_img",
    srcs = [":veritysetup.tar"],
    outs = ["veritysetup.img"],
    cmd = "cp $< $@",
)

pkg_tar(
    name = "remap_builtin_build_ctx",
    srcs = [":copy_seal_oem_bin",":copy_handle_disk_layout_bin",":copy_disable_systemd_service_bin",":veritysetup_img"],
    package_dir = "data/builtin_build_context/",
)


container_image(
    name = "cos_customizer_base",
    base = "@daisy//image",
    data_path = ".",
    debs = [
        packages["coreutils"],
        packages["tar"],
        packages["libacl1"],
        packages["libattr1"],
        packages["libc6"],
        packages["libselinux1"],
        packages["libpcre3"],
    ],
    files = glob(["data/**"]) + [
        ":workspace_dir",
        ":tmp_dir",
    ],
    tars = [":remap_builtin_build_ctx"],
)

go_image(
    name = "cos_customizer",
    base = ":cos_customizer_base",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
