# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the License);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@package_bundle//file:packages.bzl", "packages")
load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")

# gazelle:prefix github.com/GoogleCloudPlatform/cos-customizer
gazelle(name = "gazelle")

genrule(
    name = "workspace_dir",
    outs = ["workspace"],
    cmd = "mkdir $@",
)

genrule(
    name = "tmp_dir",
    outs = ["tmp"],
    cmd = "mkdir $@",
)

genrule(
    name = "copy_handle_disk_layout_bin",
    srcs = ["//src/cmd/handle_disk_layout:handle_disk_layout_bin"],
    outs = ["handle_disk_layout.bin"],
    cmd = "cp $< $@",
)

genrule(
    name = "copy_seal_oem_bin",
    srcs = ["//src/cmd/seal_oem:seal_oem_bin"],
    outs = ["seal_oem.bin"],
    cmd = "cp $< $@",
)

genrule(
    name = "copy_disable_systemd_service_bin",
    srcs = ["//src/cmd/disable_systemd_service:disable_systemd_service_bin"],
    outs = ["disable_systemd_service.bin"],
    cmd = "cp $< $@",
)

container_image(
    name = "veritysetup",
    repository = "veritysetup",
    debs = [
        packages["coreutils"],
        packages["tar"],
        packages["libacl1"],
        packages["libattr1"],
        packages["libc6"],
        packages["libselinux1"],
        packages["libpcre3"],
        packages["cryptsetup-bin"],
        packages["libcryptsetup4"],
        packages["libpopt0"],
        packages["libuuid1"],
        packages["libdevmapper1.02.1"],
        packages["libgcrypt20"],
        packages["libargon2-0"],
        packages["libjson-c3"],
        packages["libudev1"],
        packages["libpthread-stubs0-dev"],
        packages["libm17n-0"],
        packages["libgpg-error0"],
    ],
)

genrule(
    name = "veritysetup_img",
    srcs = [":veritysetup.tar"],
    outs = ["veritysetup.img"],
    cmd = "cp $< $@",
)

pkg_tar(
    name = "remap_builtin_build_ctx",
    srcs = [
        ":copy_seal_oem_bin",
        ":copy_handle_disk_layout_bin",
        ":copy_disable_systemd_service_bin",
        ":veritysetup_img",
    ],
    package_dir = "data/builtin_build_context/",
)

pkg_tar(
    name = "data_tar",
    srcs = glob(["src/data/**"]),
    strip_prefix = "src/",
)

container_image(
    name = "cos_customizer_base",
    base = "@daisy//image",
    data_path = ".",
    debs = [
        packages["coreutils"],
        packages["tar"],
        packages["libacl1"],
        packages["libattr1"],
        packages["libc6"],
        packages["libselinux1"],
        packages["libpcre3"],
    ],
    files = [
        ":workspace_dir",
        ":tmp_dir",
    ],
    tars = [
        ":remap_builtin_build_ctx",
        ":data_tar",
    ],
)

go_image(
    name = "cos_customizer",
    base = ":cos_customizer_base",
    embed = ["//src/cmd/cos_customizer:go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
