# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the License);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "disable_auto_update.go",
        "finish_image_build.go",
        "flag_vars.go",
        "install_gpu.go",
        "main.go",
        "run_script.go",
        "seal_oem.go",
        "start_image_build.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/cos-customizer/src/cmd/cos_customizer",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/config:go_default_library",
        "//src/pkg/fs:go_default_library",
        "//src/pkg/gce:go_default_library",
        "//src/pkg/preloader:go_default_library",
        "//src/pkg/tools/partutil:go_default_library",
        "//src/pkg/utils:go_default_library",
        "@com_github_google_subcommands//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "finish_image_build_test.go",
        "flag_vars_test.go",
        "install_gpu_test.go",
        "run_script_test.go",
        "start_image_build_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/pkg/config:go_default_library",
        "//src/pkg/fakes:go_default_library",
        "//src/pkg/fs:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_subcommands//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
    ],
)

go_binary(
    name = "cos_customizer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
