load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "run.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/cos-customizer/src/cmd/provisioner",
    visibility = ["//visibility:private"],
    deps = [
        "//src/pkg/provisioner:go_default_library",
        "@com_github_google_subcommands//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
    ],
)

go_binary(
    name = "provisioner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
