load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "provisioner.go",
        "state.go",
        "systemd.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/cos-customizer/src/pkg/provisioner",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/utils:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["provisioner_test.go"],
    embed = [":go_default_library"],
)
