load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")

# Our goal is for this program to be embedded into this Go package. Go embed
# only allows files in the same package directory to be embedded. So we need to
# use a "no-op" genrule to place this binary in the same directory as the
# package source.
genrule(
    name = "handle_disk_layout.bin",
    srcs = ["//src/cmd/handle_disk_layout:handle_disk_layout_bin"],
    outs = ["_handle_disk_layout.bin"],
    cmd = "cp $< $@",
)

genrule(
    name = "veritysetup.img",
    srcs = ["//:veritysetup.tar"],
    outs = ["_veritysetup.img"],
    cmd = "cp $< $@",
)

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "disable_auto_update_step.go",
        "disk_layout.go",
        "gpu_setup_script.go",
        "install_gpu_step.go",
        "provisioner.go",
        "run_script_step.go",
        "seal_oem_step.go",
        "state.go",
        "systemd.go",
    ],
    embedsrcs = [
        ":handle_disk_layout.bin",
        ":veritysetup.img",
    ],
    importpath = "github.com/GoogleCloudPlatform/cos-customizer/src/pkg/provisioner",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/tools:go_default_library",
        "//src/pkg/tools/partutil:go_default_library",
        "//src/pkg/utils:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["provisioner_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//src/pkg/fakes:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
