# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the License);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tools",
    srcs = [
        "disable_systemd_service.go",
        "extend_oem_partition.go",
        "handle_disk_layout.go",
        "seal_oem_partition.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/cos-customizer/src/pkg/tools",
    visibility = ["//visibility:public"],
    deps = ["//src/pkg/tools/partutil"],
)

go_test(
    name = "tools_test",
    srcs = ["handle_disk_layout_test.go"],
    embed = [":tools"],
    deps = ["//src/pkg/tools/partutil/partutiltest"],
)
